# clip-pop-medroa

./: .gitignore  .prettierignore  .prettierrc  CLAUDE.md  README.md  config.example.yaml  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
.husky/_/: husky.sh
docs/: MIGRATION.md  features.md  overview.md  platforms.md  roadmap.md  user-guide.md
scripts/: install-hooks.sh
src/: App.svelte  app.css  index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/resources/locales/: en.yaml  ja.yaml
src-tauri/src/: main.rs
