[package]
name = "clip-pop-medroa"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.6", features = [] }

[dependencies]
arboard = "3.3"
dirs-next = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tauri = { version = "1.6", features = ["dialog-all", "process-exit", "window-close"] }
thiserror = "1.0"
parking_lot = "0.12"

[dev-dependencies]
tempfile = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
